k8sbfr-hello-node/external-svc-hello-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sbfr-hello-node
  namespace: k8sbfr-hello-node
spec:
  type: ExternalName
  externalName: external-k8sbfr-hello-node.k8sbfr-hello-node.svc.cluster.local
