k8sbfr-hello-node/svc-hello-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sbfr-hello-node
  namespace: k8sbfr-hello-node
spec:
  # externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: k8sbfr-hello-node
  ports:
    - protocol: TCP
    #- protocol: HTTP
      port: 80
      targetPort: 8080
