k8sbfr-hello-node/ingress-hello-node.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sbfr-ingress-hello-node
  namespace: k8sbfr-hello-node
  #namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: 
      - k8sbfr.zapto.org
      - localhost
    #- host: *
      http:
        paths:
          #- path: /*
          - path: /hello
            pathType: Prefix
            backend:
              service:
                #name: external-k8sbfr-hello-node
                name: k8sbfr-hello-node
                #namespace: k8sbfr-hello-node
                port: 
                  number: 8080
